crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__string_template_short.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(STRING_LITERAL)
AddToken
AddToken
StartNode(STRING_TEMPLATE)
AddToken
AddToken
FinishNode
AddToken
AddToken
FinishNode
